registry-deploy-redis-sidecar.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "wolt-registry"
  labels:
    app: "wolt-registry"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "wolt-registry"
  template:
    metadata:
      labels:
        app: "wolt-registry"
    spec:
      containers:
      - name: "registrycontainer"
        image: "registry:2"
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: "registry-port"
        volumeMounts:
        - name: config-volume
          mountPath: /etc/docker/registry/config.yml
          subPath: config.yml
        - name: registry-pv-storage
          mountPath: "/var/lib/registry" 
        - name: htpasswd-volume
          mountPath: "/registry_auth"
          readOnly: true
      - name: "rediscontainer"
        image: "redis"
        ports:
        - containerPort: 6379
          name: "redis-port"
          protocol: TCP   
      volumes:
      - name: config-volume
        configMap:
          name: registry-config-cm
      - name: registry-pv-storage
        persistentVolumeClaim:
          claimName: registry-pv-claim
      - name: htpasswd-volume
        secret:
          secretName: registry-auth
