registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wolt-registry
  name: wolt-registry-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: wolt-registry
  type: NodePort
